[gd_scene load_steps=3 format=3 uid="uid://c0xp12xss8oeq"]

[ext_resource type="Theme" uid="uid://duma77qj7qwgx" path="res://themes/menu.tres" id="1_sdvfv"]
[ext_resource type="Script" path="res://hotseat_menu.gd" id="2_qopnk"]

[node name="HotseatMenu" type="Control"]
custom_minimum_size = Vector2(600, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sdvfv")
script = ExtResource("2_qopnk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.199732, 0.199732, 0.199732, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hotseat Setup"
horizontal_alignment = 1

[node name="P1DeckSelectorButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="P2DeckSelectorButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StartMatchButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Match"
